fixed the jumping layout bug

--- a/src/stylesheets/Components.scss
+++ b/src/stylesheets/Components.scss
@@ -174,24 +174,55 @@ body {
   transition: opacity 0.5s ease-in;
 }
 .blok {
-    padding: 20px;
+    padding: 25px;
+
     box-shadow: 0 1px 2px 1px rgba(0,0,0,.79);
-    margin-bottom: 30px;
     min-height: 375px;
     max-height: 375px;
     width: 100%;
-    transition: cubic-bezier(0.6, -0.28, 0.74, 0.05) .2s 50ms;
-    //background-color: rgb(79, 93, 109);
-    border: 5px solid rgba(255, 255, 255, 0.0);
+    top:6px;
+    position: initial;
+
+
+    -webkit-transition: all 800ms cubic-bezier(0.250, 0.250, 0.750, 0.750);
+       -moz-transition: all 800ms cubic-bezier(0.250, 0.250, 0.750, 0.750);
+         -o-transition: all 800ms cubic-bezier(0.250, 0.250, 0.750, 0.750);
+            transition: all 800ms cubic-bezier(0.250, 0.250, 0.750, 0.750); /* linear */
+
+    -webkit-transition-timing-function: cubic-bezier(0.250, 0.250, 0.750, 0.750);
+       -moz-transition-timing-function: cubic-bezier(0.250, 0.250, 0.750, 0.750);
+         -o-transition-timing-function: cubic-bezier(0.250, 0.250, 0.750, 0.750);
+            transition-timing-function: cubic-bezier(0.250, 0.250, 0.750, 0.750); /* linear */
 
 
 
 }
 .blok:hover {
-  //border: 5px solid rgba(78, 93, 108, 0.5);
-  box-shadow: 0 2px 10px 2px rgba(0, 0, 0, 0.85);
-  margin-top: -6px;
-  margin-bottom: 36px;
+  -webkit-box-shadow: 0px 10px 13px 2px rgba(15, 15, 15, 0.8);
+  -moz-box-shadow:    0px 10px 13px 2px rgba(15, 15, 15, 0.8);
+  box-shadow:         0px 10px 13px 2px rgba(15, 15, 15, 0.8);
+
+  top:-6px;
+  position: inherit;
+
+  -webkit-transition: all 500ms cubic-bezier(0.720, 0, 0.475, 1); /* older webkit */
+  -webkit-transition: all 500ms cubic-bezier(0.720, -0.600, 0.475, 1.640);
+     -moz-transition: all 500ms cubic-bezier(0.720, -0.600, 0.475, 1.640);
+       -o-transition: all 500ms cubic-bezier(0.720, -0.600, 0.475, 1.640);
+          transition: all 500ms cubic-bezier(0.720, -0.600, 0.475, 1.640); /* custom */
+
+  -webkit-transition-timing-function: cubic-bezier(0.720, 0, 0.475, 1); /* older webkit */
+  -webkit-transition-timing-function: cubic-bezier(0.720, -0.600, 0.475, 1.640);
+     -moz-transition-timing-function: cubic-bezier(0.720, -0.600, 0.475, 1.640);
+       -o-transition-timing-function: cubic-bezier(0.720, -0.600, 0.475, 1.640);
+          transition-timing-function: cubic-bezier(0.720, -0.600, 0.475, 1.640); /* custom */
+
+}
+
+.col-xs-12, .col-sm-6, .col-md-4{
+  margin-top: 6px !important;
+  margin-bottom: 6px !important;
+
 }
 .gutter-10.row {
   margin-right: -5px;
